[package]
name = "herokuru"
version = "0.0.1"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
repository = "https://github.com/udzura/herokuru"
keywords = ["heroku", "api", "async"]
license-file = "LICENSE"
readme = "README.md"
description = "Yet another Heroku client for Rust. Async ready."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = ">= 0.11", default-features = false, features = ["json"] }
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
chrono = { version = ">= 0.4", features = ["serde"] }
url = { version = ">= 2.1", features = ["serde"] }
regex = "1.5.4"

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }

[workspace]
members = [
  "herokuru_get",
]

[features]
default = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
