[package]
name = "herokuru_get"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
herokuru = { path = "..", default-features = false, features = ["rustls"] }
reqwest = { version = ">= 0.11", default-features = false, features = ["json"] }
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
chrono = { version = ">= 0.4", features = ["serde"] }
env_logger = "0.8.3"
log = "0.4.14"
structopt = "0.3.21"
envy = "^0.3"
csv = "^1.1"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
